--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,13 @@
 
+ - jekyll-feed
+ - jekyll-redirect-from
+ - jekyll-seo-tag
+ - jekyll-sitemap
+ - jekyll-avatar
+ - jemoji
+ - jekyll-mentions
+ - jekyll-include-cache
+
 # Build settings
 
  github: [metadata]
