--- a/_config.yml
+++ b/_config.yml
@@ -19,5 +19,5 @@
  gfm_quirks: paragraph_end
 
 #Site Setting
-title: [陈旭恒 博客]
-description: [Not LOve Me]
+title: "陈旭恒 博客"
+description: "Not LOve Me"
